Remove comparative language from K8s-native benefits (Lab 3)
Changed 'Simpler', 'Lower latency', 'Easier ops' to:
- Built-in: Uses Kubernetes service discovery
- Fast: Direct TCP connections
- Reliable: Fewer moving parts

New users don't have reference point for 'simpler than' comparisons.
Focus on what the architecture provides, not comparisons.

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a288958",
+   "id": "f2395990",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -11,17 +11,16 @@
     "\n",
     "In this lab, you will:\n",
     "- Set up Kubernetes cluster with Dynamo platform\n",
-    "- Deploy Dynamo v0.8.0 using K8s-native discovery (simplified architecture)\n",
-    "- Configure a backend engine using disaggregated serving\n",
+    "- Deploy Dynamo, NVIDIA's inference serving framework\n",
+    "- Configure a model using disaggregated serving (separate prefill and decode workers)\n",
     "- Test the deployment with OpenAI-compatible API\n",
     "- Benchmark the deployment using AI-Perf\n",
     "\n",
-    "**What's New in v0.8.0:**\n",
-    "- ✅ Kubernetes-native service discovery (no etcd required)\n",
-    "- ✅ TCP transport by default (no NATS required)\n",
-    "- ✅ Validation webhooks for early error detection\n",
-    "- ✅ Enhanced observability with unified tracing\n",
-    "- ✅ Improved disaggregated serving performance\n",
+    "**What You'll Learn:**\n",
+    "- How to deploy Dynamo on Kubernetes\n",
+    "- Understanding disaggregated serving architecture\n",
+    "- Using Dynamo's OpenAI-compatible API\n",
+    "- Monitoring inference performance\n",
     "\n",
     "**Duration**: ~90 minutes\n",
     "\n",
@@ -43,18 +42,18 @@
     "\n",
     "### Step 2: Set Configuration Variables\n",
     "\n",
-    "Set your configuration variables. **Replace the values below with your own:**\n"
+    "Run this to set up your environment. The defaults work for most users:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f1a4f3",
+   "id": "bd5f6cc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Set environment variables (use defaults if not already set)\n",
+    "# Set environment variables (these defaults work for most setups)\n",
     "export RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "export CACHE_PATH=${CACHE_PATH:-/data/huggingface-cache}\n",
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73bbd54c",
+   "id": "c4f951fc",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -89,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bde11c2",
+   "id": "004f7c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +108,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e518a3",
+   "id": "a473f663",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
     "\n",
-    "To access NVIDIA's Dynamo container images, you need to authenticate with NGC (NVIDIA GPU Cloud).\n",
+    "To access NVIDIA's Dynamo container images, you need to authenticate with NGC.\n",
     "\n",
     "#### Get Your NGC API Key\n",
     "\n",
@@ -132,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90c4fb4",
+   "id": "bf50ebd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b07e6f",
+   "id": "32648e71",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -166,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebd63b3",
+   "id": "ea93577d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e31833",
+   "id": "b44d892a",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -198,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8091327",
+   "id": "2fbd4fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a45eb6",
+   "id": "3bac40d5",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -222,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773a4698",
+   "id": "a3a575a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbff7ed4",
+   "id": "abf16517",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -251,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a75d71",
+   "id": "b2fcf3f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33514ce1",
+   "id": "600ff2d5",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -285,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055d6d29",
+   "id": "0759281e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eff5059",
+   "id": "a286c9a1",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -357,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9363dcfa",
+   "id": "089e383d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c625470",
+   "id": "b3321486",
    "metadata": {},
    "source": [
     "### Step 1b: Install CRDs (Optional - Instructor May Do This)\n",
@@ -385,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee5a822a",
+   "id": "da5cd8a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3ab923",
+   "id": "0bbdabc7",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -417,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11dbe5d",
+   "id": "0e23a801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d226c439",
+   "id": "3f15da1f",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -458,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c8afe5b",
+   "id": "14ac5929",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -506,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25c49ab",
+   "id": "973cacf2",
    "metadata": {},
    "source": [
     "\n",
@@ -515,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b3ecf8f",
+   "id": "62bb56dd",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -582,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c574f7b",
+   "id": "68e187a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ddc3f07",
+   "id": "cab1c707",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -690,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c0f38a",
+   "id": "8f848eea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c011f3bb",
+   "id": "6581501f",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -720,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a134132e",
+   "id": "e822df4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa77750e",
+   "id": "f99afec5",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -765,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5608bd",
+   "id": "184b8b0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1306490a",
+   "id": "e43f0a55",
    "metadata": {},
    "source": [
     "### Step 3b: Troubleshoot Pod Issues (If Pods Are Crashing)\n",
@@ -832,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e3b0140",
+   "id": "33415b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c546e6dc",
+   "id": "4bb6e6e3",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -892,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a9a2d4",
+   "id": "20cd3f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582c9230",
+   "id": "ac3e3bcb",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -953,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e528a5bd",
+   "id": "59136dda",
    "metadata": {},
    "source": [
     "### Understanding Disaggregated Serving Trade-offs\n",
@@ -990,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "937d9fe9",
+   "id": "24058c41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321b483d",
+   "id": "14df4ae8",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -1016,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c89cc871",
+   "id": "be475339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b89fe1",
+   "id": "78eee4be",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -1039,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d850a0",
+   "id": "1b3ce8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2874f29f",
+   "id": "4a6058ed",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -1069,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21e38f3",
+   "id": "1cf83df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb2bec9",
+   "id": "c2fd57c1",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -1099,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950285a3",
+   "id": "4f05ebee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c085ffff",
+   "id": "f4fa870d",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1151,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6884a406",
+   "id": "ea1e85cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed3835e9",
+   "id": "eec62d93",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1242,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7fad32",
+   "id": "f5078920",
    "metadata": {},
    "source": [
     "### Cleanup\n",
@@ -1253,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a92921f9",
+   "id": "56afe6f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a74e221c",
+   "id": "cd4aba6c",
    "metadata": {},
    "source": [
     "**Note:** Keep your namespace and platform for Lab 2! Only delete the deployment and service, not the namespace.\n",
@@ -1287,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bca7411",
+   "id": "c1fd5d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e1fce85",
+   "id": "20d4d2ae",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1313,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39343b4",
+   "id": "a40f59e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017d9fe0",
+   "id": "60279496",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1340,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f7420b2",
+   "id": "31c047e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "070dc6d5",
+   "id": "87786964",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1367,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99cd5105",
+   "id": "88096688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc756cb3",
+   "id": "f44992ca",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1446,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b64813",
+   "id": "bf1dc536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1456,7 +1455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d90ac0",
+   "id": "9a784ce8",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1465,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa770cd",
+   "id": "fe0e7179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f4c808",
+   "id": "ca61dc92",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1501,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4717a846",
+   "id": "81f051fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92697d97",
+   "id": "48e37bc0",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1644,7 +1643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb165cf",
+   "id": "34d9d30c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5f522e",
+   "id": "141b7633",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1678,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f31e034",
+   "id": "06b3628c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,7 +1699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfbff3e2",
+   "id": "b2ead73b",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1709,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1617083",
+   "id": "5bb070af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,7 +1743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "badf4a43",
+   "id": "040e9b1d",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1753,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89216bfd",
+   "id": "8f1ae14c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc0ee5eb",
+   "id": "f0652141",
    "metadata": {},
    "source": [
     "### A7. Cleanup\n"
@@ -1781,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d62c101",
+   "id": "f7e445f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,7 +1801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c71a49d",
+   "id": "bfb2c8e4",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1811,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ee9d58",
+   "id": "a226339e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1839,7 +1838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63c1d42",
+   "id": "acd9a3bb",
    "metadata": {},
    "source": [
     "\n"
