--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12900d51",
+   "id": "8bfccaeb",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -12,10 +12,9 @@
     "In this extension to Lab 1, you will:\n",
     "- Access the cluster-wide Grafana and Prometheus installation\n",
     "- Configure metrics collection from your Dynamo deployment\n",
-    "- Create and view the Dynamo dashboard in Grafana\n",
-    "- **New in v0.8.0:** Add Planner observability dashboard\n",
-    "- **New in v0.8.0:** Explore unified tracing with OpenTelemetry\n",
-    "- Explore metrics in Prometheus\n",
+    "- Create and view the Dynamo inference dashboard in Grafana\n",
+    "- Add Planner observability dashboard to monitor request routing\n",
+    "- Explore unified tracing with OpenTelemetry for debugging\n",
     "- Understand key performance metrics\n",
     "\n",
     "**Prerequisites**: Complete Lab 1 (Introduction and Kubernetes-Based Deployment)\n",
@@ -60,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d358f1a2",
+   "id": "9e7f9e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c964d50c",
+   "id": "c49602f3",
    "metadata": {},
    "source": [
     "### Step 2: Verify Monitoring Stack is Running\n",
@@ -108,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68795800",
+   "id": "a62f1c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "026bf5f6",
+   "id": "0b96d270",
    "metadata": {},
    "source": [
     "---\n",
@@ -157,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b705c0",
+   "id": "00b7e3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e2c162d",
+   "id": "648475cf",
    "metadata": {},
    "source": [
     "### Step 2: Check if PodMonitors Were Created\n",
@@ -183,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b255b9f",
+   "id": "0352b49d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f2b73c",
+   "id": "c8d586c7",
    "metadata": {},
    "source": [
     "### Step 3: Label PodMonitors for Prometheus Discovery\n",
@@ -210,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "604d3aeb",
+   "id": "066b1e26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de967364",
+   "id": "1e1888b4",
    "metadata": {},
    "source": [
     "### Step 4: Manually Test Metrics Endpoint\n",
@@ -240,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d63e7a2",
+   "id": "04eb7849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2b7da0",
+   "id": "4540f7a9",
    "metadata": {},
    "source": [
     "### Step 5: Send Test Traffic to Generate Metrics\n",
@@ -272,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea5b9dcb",
+   "id": "99ef227f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916d7936",
+   "id": "082860e3",
    "metadata": {},
    "source": [
     "---\n",
@@ -332,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "393a5f4d",
+   "id": "1e1c8b64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2505805a",
+   "id": "c22132c4",
    "metadata": {},
    "source": [
     "---\n",
@@ -417,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad4487e",
+   "id": "740664a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6dd7a01",
+   "id": "5cd25564",
    "metadata": {},
    "source": [
     "---\n",
@@ -480,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb77e3d",
+   "id": "1a6030b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d27a6794",
+   "id": "09eee937",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -566,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2414de5",
+   "id": "d123005d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c65beacb",
+   "id": "cbc2b5fa",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -623,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e882044",
+   "id": "254c38b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbaba25",
+   "id": "af458621",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -823,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32c150b",
+   "id": "b15f6de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c109be63",
+   "id": "4fb8c4d7",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -873,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99868d1d",
+   "id": "ab29252a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96df5268",
+   "id": "7ef963b1",
    "metadata": {},
    "source": [
     "---\n",
@@ -953,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553784eb",
+   "id": "e67c25e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddbd26c1",
+   "id": "03d4f944",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -981,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd71743",
+   "id": "4573b445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d289284",
+   "id": "b1d6a96d",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1009,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "552b4a8e",
+   "id": "eda562eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab314fca",
+   "id": "f3b31d80",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1033,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23033fea",
+   "id": "8e914d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bdd9a2e",
+   "id": "6e86f706",
    "metadata": {},
    "source": [
     "---\n",
