Fix incorrect NATS/etcd reference in Lab 3 deployment section
Section 3 'Understanding Dynamo's Distributed Architecture' was still
describing NATS/etcd coordination despite main flow using K8s-native.

Changes:
- Replaced NATS/etcd registration/discovery with K8s-native (EndpointSlices)
- Updated steps to reflect K8s services and EndpointSlices
- Moved NATS/etcd reference to note about Appendix A & B
- Also removed 'gigabytes' metric from NIXL description (too specific)

Now accurately describes the K8s-native deployment this lab teaches.

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8762f4a3",
+   "id": "c12b1495",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -114,7 +114,7 @@
     "\n",
     "**NIXL (NVIDIA Inference Transfer Library)**: Handles actual KV cache data transfer:\n",
     "- Uses high-speed transports (RDMA, TCP, or CPU/SSD offload)\n",
-    "- Transfers gigabytes of tensor data between workers\n",
+    "- Transfers large tensor data between workers efficiently\n",
     "- Direct worker-to-worker communication\n",
     "- Works with both K8s-native and NATS/etcd modes\n",
     "\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f5fa39c",
+   "id": "06eb0579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0f839ea",
+   "id": "9bc76b4c",
    "metadata": {},
    "source": [
     "---\n",
@@ -209,14 +209,14 @@
     "\n",
     "### Understanding Dynamo's Distributed Architecture\n",
     "\n",
-    "Dynamo (orchestrated by Grove) automatically uses NATS and etcd for distributed coordination when they are available in the cluster. The deployment will:\n",
+    "Dynamo (orchestrated by Grove) uses Kubernetes-native service discovery to coordinate distributed components. The deployment works as follows:\n",
     "\n",
-    "**1. Workers register via NATS**: Each worker announces itself and its cache state\n",
-    "**2. Frontend discovers workers**: The frontend finds workers through NATS service discovery\n",
-    "**3. KV-aware Router**: Routes requests to workers with relevant cached data\n",
-    "**4. NIXL handles KV cache data**: Workers transfer actual KV cache tensors via NIXL (RDMA/TCP), not through NATS\n",
+    "**1. Workers register with Kubernetes**: Each worker pod registers itself via K8s services\n",
+    "**2. Frontend discovers workers**: The frontend uses EndpointSlices to find available workers\n",
+    "**3. KV-aware Router**: Routes requests intelligently across workers\n",
+    "**4. NIXL handles KV cache data**: Workers transfer KV cache tensors directly via NIXL (RDMA/TCP)\n",
     "\n",
-    "**Note**: In Dynamo 0.8+, Kubernetes-native discovery (EndpointSlices) is available as an alternative to NATS/etcd for simpler deployments without KV-aware routing.\n",
+    "**Note**: For extreme scale deployments, NATS/etcd can be added for advanced coordination (see Appendix A & B).\n",
     "\n",
     "### Step 1: Create Distributed Dynamo Deployment\n",
     "\n",
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b5845bd",
+   "id": "fec6575e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f681fa3e",
+   "id": "0eec2929",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92719737",
+   "id": "95c854ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf8ef8a6",
+   "id": "d2caaedf",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed1888ab",
+   "id": "f6c35e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab3d97b",
+   "id": "caa42057",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "708ff792",
+   "id": "93486bd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f81a0a",
+   "id": "1f70a5cd",
    "metadata": {},
    "source": [
     "---\n",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b32eb4",
+   "id": "bde06bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80b7b4fe",
+   "id": "d4718f0e",
    "metadata": {},
    "source": [
     "### Step 2: Test Distributed Dynamo with Traffic\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c2c2e2",
+   "id": "bef7c8ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3cde46",
+   "id": "fccd0810",
    "metadata": {},
    "source": [
     "---\n",
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f132d3",
+   "id": "34672a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd97e548",
+   "id": "fbd2e2df",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98eb5d9",
+   "id": "0172c29d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3bf3da9",
+   "id": "110dbb25",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069af6f6",
+   "id": "9b9c8de6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05191a53",
+   "id": "fa408fd1",
    "metadata": {},
    "source": [
     "---\n",
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b222541c",
+   "id": "889df488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c05341",
+   "id": "d764aea9",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe96e86",
+   "id": "222fef8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56bb9fc8",
+   "id": "543e582e",
    "metadata": {},
    "source": [
     "---\n",
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362bbba3",
+   "id": "a234321a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d283da0e",
+   "id": "2e35bd92",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c31d8b6",
+   "id": "c837a65d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75d65831",
+   "id": "eed47104",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52b21ce",
+   "id": "0d53bf29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "230f4d8e",
+   "id": "b109ac72",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74ed0a39",
+   "id": "69308cf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df4ca9f",
+   "id": "9a531ed9",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39f28543",
+   "id": "2e0208c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8646f8a",
+   "id": "5ba19925",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7d6a338",
+   "id": "2752a16d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4517990",
+   "id": "cd442da8",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7258edde",
+   "id": "c665510c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06788c7e",
+   "id": "161d6bc2",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8a7fb1c",
+   "id": "3fdae949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572495a2",
+   "id": "80f448c1",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
